# pineapplehub

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md  Trunk.toml  doc.md  index.html  main.py  pyproject.toml
.cargo/: config.toml
.github/workflows/: deploy.yml
assets/: README.md
docs/: roi_known_issues.md
docs/algorithms/: algorithm.md  algorithm_zh.md  fruitlet_segmentation.md  fruitlet_segmentation_zh.md  generate_perspective_projection.py
docs/user_guide/: debug_interpretation.md  debug_interpretation_zh.md
js/: coi-serviceworker.js
pineapplehub/: calc.py
src/: correction.rs  icons.rs  intermediate.rs  main.rs  theme.rs  ui.rs  upload.rs
src/history/: mod.rs  model.rs  stats.rs  store.rs
src/pipeline/: fast.rs  fruitlet_counting.rs  mod.rs  roi_extraction.rs  scale_calibration.rs  unwrap_metrics.rs
src/ui/: help_overlay.rs  history_view.rs  parallel_coords.rs  preview.rs  viewer.rs
src/ui/preview/: result_img.rs
