[package]
name = "pineapplehub"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = [
  "image",
  "markdown",
  "fira-sans",
  "webgl",
  "advanced",
  "sipper",
] }
rfd = { git = "https://github.com/PolyMeilex/rfd.git", features = [
  "file-handle-inner",
] }
image = { version = "0.25" }
blurhash = "0.2.3"
thiserror = "2"
sipper = "0.1"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
