[package]
name = "pineapplehub"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = [
  "image",
  "markdown",
  "fira-sans",
  "webgl",
  "advanced",
  "sipper",
] }
rfd = { version = "0.17", features = [
  "file-handle-inner",
] }
image = "0.25"
imageproc = "0.26"
image-debug-utils = "0.1"
blurhash = "0.2.3"
thiserror = "2"
sipper = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = "0.3"

console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
